# subtitle-recognition

./: .gitignore  CMakeLists.txt  README.md  main.cpp  srt.cpp  srt.h
